dev: añadido soporte para TCP y UDP